--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 VITE_PAYPAL_CLIENT="AXcs5rlPZaW6OlcnhVyCce-ERrJctAhm2fdC7KyXa-M0MsCw21XxDyIueF4KZO5eTk4JoeecBt6mBGSz"
-VITE_BACKEND_URL="http://localhost:5000"
+VITE_BACKEND_URL="https://backend-two-ruddy-34.vercel.app/"
